add package for google-maps-nodejs-client

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.16",
     "@prisma/client": "^4.5.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
